<resources>
    <string name="app_name">BatchTest</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- My Groups-->
    <string name="name_hint">enter name</string>
    <string name="submit_btn_text">submit!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Group Creation -->
    <string name="group_creation_title">Create a group</string>
    <string name="group_code_template">Group Code:</string>

    <!--    bottom nav -->
    <string name="match">Match</string>
    <string name="my_groups">My Groups</string>
    <string name="other_groups">Other Groups</string>
    <string name="profile">Profile</string>

    <!--    user registration -->
    <string name="user_registration_phone_number">Phone Number</string>
    <string name="user_registration_enter_phone_number">Enter Phone Number</string>
    <string name="user_registration_MFA_enrollment">Enroll in MFA?</string>
    <string name="user_registration_Batch2023">\u00A9 Batch 2023</string>
    <string name="user_registration_Register_button">Register</string>
    <string name="user_registration_TOS">By creating an account you agree to the terms of service for this application.</string>
    <string name="user_registration_Register_title">Registration</string>

    <!--    user login-->
    <string name="user_login_title">Batch</string>
    <string name="user_login_login_text">Login</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="no_acc_sign_up_text"><u>Sign Up</u></string>
    <string name="username_text">Username</string>
    <string name="username_text_hint">email/username</string>
    <string name="password_text">Password</string>
    <string name="password_hint">************</string>
    <string name="forgot_username_button_text"><u>Forgot Username?</u></string>
    <string name="forgot_password_text"><u>Forgot Password?</u></string>
    <string name="remember_me_rb_text">Remember Me</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_title_text">Forgot Password?</string>
    <string name="enter_email_text">Enter Email</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="submit_btn_text2">Submit</string>
    <string name="phone_number_text">(***)***-****</string>
    <string name="mfVerificationTitle">SMS Verification</string>
    <string name="mf_verification_code_text">Enter Code</string>
    <string name="mf_verification_enter_code">Code</string>
    <string name="mf_authentication_verify_btn_text">Verify</string>

    <!--    matched groups tab -->
    <string name="reject_button">reject button</string>
    <string name="accept_button">accept button</string>
    <string name="undo_button">undo button</string>
    <string name="match_group_card_more_button">match group card more button</string>
    <string name="biscuit_icon">biscuit icon</string>
    <string name="about_us">About us</string>
    <string name="set_primary_group_message">Set a primary group to start matching!</string>
    <string name="join_group_message">Create or join a group to start matching!</string>
    <string name="no_group_found">No groups found with specified preferences!</string>
    <string name="block_group_warning">Do you wish to block %1$s group?</string>

    <!--    other groups tab -->
    <string name="matched">Matched</string>
    <string name="pending">Pending</string>

    <!--    user profile tab-->
    <string name="edit_profile">Edit Profile</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>

    <!--    preferences -->
    <string name="preferences_title">Preferences</string>
    <string name="general_info">General Information</string>
    <string name="set_age">Age Range</string>
    <string name="set_location">Set Location</string>
    <string name="location">Location</string>
    <string name="set_tags">Set Tags</string>
    <string name="deal_breaker">Deal Breakers</string>
    <string name="max_distance">Max Distance</string>
    <string name="gender">Gender</string>
    <string name="save_preferences_btn">Save</string>

    <!--  Setting -->
    <string name="account_setting_title">Account Settings</string>
    <string name="notification">Notifications</string>

    <!-- Notifications -->
    <string name="default_notification_channel_id">notification_channel_id</string>


    <!-- Profile Information -->
    <string name="update">Update</string>
    <string name="birthday">Select Birthday</string>
    <string name="firstName">Enter First Name</string>
    <string name="lastName">Enter Last Name</string>
    <string name="displayName">Enter Display Name</string>
    <string name="personalBio">Tells us a little about yourself</string>
    <string name="personalEmail">Your Email</string>
    <string name="group_chat_title_placeholder">Group Chat</string>

    <!-- view group info -->
    <string name="edit_group_profile">Edit group profile</string>
    <string name="invite_user">Invite a user</string>
    <string name="report_group">Report group</string>
    <string name="block_group">Block group</string>
    <string name="give_biscuit">Give biscuit</string>
    <string name="remove_biscuit">Remove biscuit</string>
    <string name="biscuit_val">%1$d</string>

    <!-- join group -->
    <string name="search">Search</string>
    <string name="join">Join</string>
    <string name="group_full">Group is full</string>
    <string name="already_joined">Already joined</string>
    <string name="member_count">%1$d/4</string>

    <!-- pending group -->
    <string name="no_pending_groups">No pending groups</string>
    <string name="block_user">Block user</string>
    <string name="report_user">Report user</string>

    <!-- Discovery Preferences -->
    <string name="discoverPref">Discovery Preferences</string>
    <string name="fragmet_mgdialog_title">Please select which group chat you would like to open.</string>
    <string name="fragment_report_dialog_profanity_text">Profanity</string>
    <string name="fragment_report_dialog_imposter_text">Fake Account</string>
    <string name="fragment_report_dialog_harassment_text">Harassment</string>
    <string name="fragment_report_dialog_tell_us_more_hint">Tell us more…</string>
    <string name="fragment_report_dialog_other_tv">Other:</string>
    <string-array name="rangeSliderValues">
        <item>18</item>
        <item>100</item>
    </string-array>

    <!-- Blocked Group -->
    <string name="leaderWarning">Sorry Only The Group\'s Leader May Block a Group</string>
    <string name="ok">OK</string>
    <string name="group_remove_matching">Group will be removed from matching tab</string>
    <string name="block_discovery">Group will not appear in discovery matching</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>block


</resources>